--- a/MC3Server.vcxproj
+++ b/MC3Server.vcxproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <ClInclude Include="src\util\NonCopy.h" />
     <ClInclude Include="src\util\NonMove.h" />
+    <ClInclude Include="src\util\ThreadSafe.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
