--- a/MC3Server.vcxproj.filters
+++ b/MC3Server.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="src\util\NonMove.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\util\ThreadSafe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
