--- a/MC3Server.vcxproj
+++ b/MC3Server.vcxproj
@@ -69,6 +69,7 @@
     <ClCompile Include="src\net\Socket.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\util\Logger.cpp" />
+    <ClCompile Include="src\world\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Client.h" />
@@ -82,6 +83,8 @@
     <ClInclude Include="src\util\NonCopy.h" />
     <ClInclude Include="src\util\NonMove.h" />
     <ClInclude Include="src\util\ThreadSafe.h" />
+    <ClInclude Include="src\world\World.h" />
+    <ClInclude Include="src\world\WorldTime.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
